<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ayushmaharjan.learning.learntotest.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:text="@string/app_name" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:hint="Enter your name here"
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sayHelloButton"
        android:text="Say hello!"
        android:onClick="sayHello"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/launchSecondActivityButton"
        android:text="Second Activity"
        android:onClick="launchSecondActivity"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/launchIdlingResourceActivityButton"
        android:text="Idling Resource"
        android:onClick="launchIdlingResourceActivity"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pickContact"
        android:text="Pick Contact"
        android:onClick="pickContact"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/launchDialerButton"
        android:text="Launch Dialer"
        android:onClick="launchDialer"/>

</LinearLayout>
