<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".intenttest.SecondActivity">

    <TextView
        android:id="@+id/textView1"
        android:text="Hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_below="@id/textView1"
        android:id="@+id/button"
        android:text="Hello"
        android:onClick="btnClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
