<resources>
    <string name="app_name">Learn to Test</string>
    <string name="title_activity_idling">IdlingActivity</string>
</resources>
